# apache_beam_test

./: .gitignore  README.md  input.txt  pipeline.py  pyproject.toml
src/gcp_dataflow_test/: __init__.py
