[project]
name = "gcp-dataflow-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "momokan928", email = "kan.kan19980928@gmail.com" }
]
dependencies = [
    "fastavro>=1.9.1",
    "apache-beam",
    "apache-beam[gcp]",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gcp_dataflow_test"]